// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with custom styles 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "borderColor": "#FFFFFF",
      "borderRadius": 14,
      "borderWidth": 2,
      "marginVertical": 8,
      "paddingHorizontal": 12,
      "paddingVertical": 14,
    }
  }
>
  Test
</View>
`;

exports[`Card should render with default styles 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(0,0,0, 0.2)",
      "borderColor": "#FFFFFF",
      "borderRadius": 14,
      "borderWidth": 2,
      "marginVertical": 8,
      "paddingHorizontal": 12,
      "paddingVertical": 14,
    }
  }
>
  Test
</View>
`;
